# QQVoice

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/reid/qqvoice/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: changeVoice.cpp  com_reid_qqvoice_VoiceTools.h
app/src/main/java/com/reid/qqvoice/: MainActivity.java  PermissionManager  PermissionManager.java  VoiceTools.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/reid/qqvoice/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
